layout fix (delete a sidebar gap in mozilla)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,12 +1,3 @@
-.wrapper {
-    margin: 0 auto;
-    max-width: 1920px;
-
-    display: flex;
-    flex-direction: row-reverse;
-    overflow: hidden;
-}
-
 .header {
     position: fixed;
     right: 0px;
@@ -88,22 +79,29 @@
     }
 }
 
-.page {
-    margin-top: clamp(3.5em, calc(20vw * 0.3), 4.5em);
+.header-placeholder {
+    height: clamp(3.5em, calc(20vw * 0.3), 4.5em);
+}
+
+.wrapper {
+    box-sizing: border-box;
+    margin: 0 auto;
     width: 100%;
+    height: calc(100vh - clamp(3.5em, calc(20vw * 0.3), 4.5em));
+    max-width: 1920px;
 
-    overflow: hidden;
+    overflow-y: scroll;
 
-    transition: margin-left 500ms ease;
+    transition: padding 500ms ease;
     &.sidebar-active {
-        margin-left: 17em;
+        padding-left: 17em;
     }
 }
 
 @media screen and (max-width: 1100px) {
-    .page {
+    .wrapper {
         &.sidebar-active {
-            margin-left: 0;
+            padding-left: 0;
         }
     }
 }
