--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@
 
 body {
     font-family: 'Open Sans', sans-serif;
+
+    overflow: hidden;
+
     background-color: #F6F7F9;
-    overflow-x: hidden;
 }
